# narcissus

./: AGENTS.md  Cargo.toml  RESUME.sh
docs/: DESIGNS.md  OVERVIEW.md  ROADMAPS.md
examples/: collections.ns  patterns.ns  quickstart.ns
examples/app/: orchid.toml
examples/app/examples/: hello.ns
examples/app/src/: main.ns  util.ns
examples/app/tests/: smoke_test.ns
examples/modules/: orchid.toml
examples/modules/src/: main.ns  unused.ns  utils.ns
examples/modules/src/samedir/: one.ns
examples/modules/src/samedir/two/: impl.ns
src/: ast.rs  diagnostics.rs  environment.rs  lexer.rs  lib.rs  parser.rs  repl.rs  runtime.rs  stdlib.rs  value.rs
tests/: cli.rs  interpreter.rs
